--- a/SpajalicaFrontEnd/css/style_main.css
+++ b/SpajalicaFrontEnd/css/style_main.css
@@ -1,11 +1,3 @@
-/* 
-
-Nature Template 
-
-http://www.templatemo.com/tm-398-nature
-
-*/
-
 body, html { overflow-x: hidden; }
 
 body {
@@ -15,6 +7,7 @@ body {
     font-style: normal; 
     -webkit-font-smoothing: antialiased; /* Fix for webkit rendering */
     -webkit-text-size-adjust: 100%;
+    background-color: #262626;
 }
 
 h1, h2, h3, h4, h5, h6, span, p { font-family: 'Raleway', sans-serif; }
@@ -60,10 +53,10 @@ img {
      overflow: hidden;
 }
 
-.templatemo-site-title { 
+.templatemo-site-title {
     color: #fff !important; 
     text-shadow: 0px 2px 3px rgba(0, 0, 0, 1);
-	font-size: 48px;
+	font-size: 40px;
 }
 
 .templatemo-site-title a, .templatemo-site-title a:hover { 
@@ -191,6 +184,8 @@ img.slide {
 
 .templatemo-content {
     padding-bottom: 6%;
+    padding-left: 1%;
+    padding-right: 1%;
 }
 
 .footer {
