--- a/SpajalicaFrontEnd/css/style_main.css
+++ b/SpajalicaFrontEnd/css/style_main.css
@@ -138,6 +138,12 @@ img.slide {
     font-size: 16px;
 }
 
+.temp-content span {
+    font-family: 'Raleway', sans-serif;
+    color: #fff;
+    font-size: 16px;
+}
+
 .menu {
     position: fixed; 
     width: 220px;
@@ -233,4 +239,32 @@ img.slide {
     .footer-text {
         margin-left: 0;
     }
+}
+
+button {
+    background-color: white;
+    border: 2px solid #4CAF50;
+    color: black;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+    cursor: pointer;
+    border-radius:40px;
+}
+
+button:hover {
+    background-color: #4CAF50;
+    color: white;
+}
+
+input {
+    border-radius:40px;
+    background-color: white;
+    color: black;
+    border: 2px solid #4CAF50; /* Green */
 }
