--- a/SpajalicaFrontEnd/css/style_main.css
+++ b/SpajalicaFrontEnd/css/style_main.css
@@ -245,11 +245,11 @@ button {
     background-color: white;
     border: 2px solid #4CAF50;
     color: black;
-    padding: 16px 32px;
+    /*padding: 16px 32px;*/
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 16px;
+    font-size: 13px;
     margin: 4px 2px;
     -webkit-transition-duration: 0.4s; /* Safari */
     transition-duration: 0.4s;
