--- a/SpajalicaFrontEnd/css/style_main.css
+++ b/SpajalicaFrontEnd/css/style_main.css
@@ -262,9 +262,23 @@ button:hover {
     color: white;
 }
 
-input {
+.settings-input {
     border-radius:40px;
     background-color: white;
     color: black;
-    border: 2px solid #4CAF50; /* Green */
+    border: 1px solid #4CAF50; /* Green */
+    font-size: 13px;
+}
+
+.settings-input:hover + .help {
+    display: inline;
+}
+
+.help {
+    background-color: #59B2E0;
+    border-radius: 10px;
+    display: none;
+    opacity: 0.9;
+    padding: 10px;
+    z-index: 100;
 }
