--- a/SpajalicaFrontEnd/css/style_main.css
+++ b/SpajalicaFrontEnd/css/style_main.css
@@ -241,26 +241,26 @@ img.slide {
     }
 }
 
-button {
-    background-color: white;
-    border: 2px solid #4CAF50;
-    color: black;
-    /*padding: 16px 32px;*/
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 13px;
-    margin: 4px 2px;
-    -webkit-transition-duration: 0.4s; /* Safari */
-    transition-duration: 0.4s;
-    cursor: pointer;
-    border-radius:40px;
-}
+/*button {*/
+    /*background-color: white;*/
+    /*border: 2px solid #4CAF50;*/
+    /*color: black;*/
+    /*!*padding: 16px 32px;*!*/
+    /*text-align: center;*/
+    /*text-decoration: none;*/
+    /*display: inline-block;*/
+    /*font-size: 13px;*/
+    /*margin: 4px 2px;*/
+    /*-webkit-transition-duration: 0.4s; !* Safari *!*/
+    /*transition-duration: 0.4s;*/
+    /*cursor: pointer;*/
+    /*border-radius:40px;*/
+/*}*/
 
-button:hover {
-    background-color: #4CAF50;
-    color: white;
-}
+/*button:hover {*/
+    /*background-color: #4CAF50;*/
+    /*color: white;*/
+/*}*/
 
 .settings-input {
     border-radius:40px;
@@ -280,5 +280,59 @@ button:hover {
     display: none;
     opacity: 0.9;
     padding: 10px;
+    z-index: 100;
+}
+
+.messages-container {
+    width:100%;
+    max-height:250px;
+    overflow-y:scroll;
+    border: 1px solid black;
+    background-color: white;
+}
+
+.sender {
+    clear:both;
+    float:right;
+    padding-right: 2px;
+    background-color: #59B2E0;
+    outline: none;
+    color: #fff;
+    font-size: 14px;
+    height: auto;
+    font-weight: normal;
+    border-color: #59B2E6;
+    border-radius:3px;
+}
+
+.recipient {
+    clear:both;
+    float:left;
+    width: auto;
+    padding-left: 2px;
+    background-color: #1CB94E;
+    outline: none;
+    color: #fff;
+    font-size: 14px;
+    height: auto;
+    font-weight: normal;
+    border-color: #1CB94A;
+    border-radius:3px;
+}
+
+.sender:hover + .message-time {
+    display: inline;
+}
+
+.recipient:hover + .message-time {
+    display: inline;
+}
+
+.message-time {
+    background-color: #59B2E0;
+    /*border-radius: 10px;*/
+    display: none;
+    opacity: 0.9;
+    /*padding: 10px;*/
     z-index: 100;
 }
