--- a/SpajalicaFrontEnd/css/style_main.css
+++ b/SpajalicaFrontEnd/css/style_main.css
@@ -321,18 +321,51 @@ img.slide {
 }
 
 .sender:hover + .message-time {
-    display: inline;
+    display: inline-table;
 }
 
 .recipient:hover + .message-time {
-    display: inline;
+    display: inline-table;
 }
 
 .message-time {
+    float: left;
     background-color: #616161;
-    /*border-radius: 10px;*/
+    border-radius: 10px;
     display: none;
     opacity: 0.9;
-    padding: 10px;
+    /*padding: 8px;*/
     z-index: 100;
+}
+
+#refresh {
+    float: right;
+    height:100%;
+    /*position:fixed;*/
+    min-width: 60px;
+    width: 10%;
+    background-color: white;
+    border: 2px solid #4CAF50;
+    border-radius: 8px;
+    color: black;
+    /*padding: 8px 16px;*/
+    text-align: center;
+    text-decoration: none;
+    /*display: inline-block;*/
+    font-size: 13px;
+    /*margin: 4px 2px;*/
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+    cursor: pointer;
+}
+
+#refresh:hover {
+background-color: #4CAF50;
+color: white;
+}
+
+#input-userName {
+    width: 89%;
+    float: left;
+    min-width: 100px;
 }
