Uradjen prvi deo unosenja tagova: unos profilnih tagova je gotov.

--- a/SpajalicaFrontEnd/css/style_main.css
+++ b/SpajalicaFrontEnd/css/style_main.css
@@ -263,11 +263,7 @@ img.slide {
 /*}*/
 
 .settings-input {
-    border-radius:40px;
-    background-color: white;
-    color: black;
-    border: 1px solid #4CAF50; /* Green */
-    font-size: 13px;
+    /*float: right;*/
 }
 
 .settings-input:hover + .help {
