Ažuriran način prikaza pretrage, kao i sama pretraga koja sada traži po svim javnim parametrima.

--- a/SpajalicaFrontEnd/css/style_main.css
+++ b/SpajalicaFrontEnd/css/style_main.css
@@ -126,6 +126,11 @@ img.slide {
     font-family: 'Raleway', sans-serif;
 }
 
+.temp-content h6 {
+    color: #fff;
+    font-family: 'Raleway', sans-serif;
+}
+
 .temp-content a {
     color: #eca;
     font-style: italic;
