--- a/SpajalicaFrontEnd/css/style_main.css
+++ b/SpajalicaFrontEnd/css/style_main.css
@@ -365,3 +365,19 @@ img.slide {
     background-color: rgba(0,0,0,0.5);
 }
 
+#profile-pic {
+    min-width: 200px;
+    min-height: 200px;
+    padding-top: 10px;
+    width: 15%;
+    height: 15%;
+}
+
+input[type="date"]::-webkit-datetime-edit {
+    color: transparent;
+}
+
+/* Include this to make it visible when input is clicked */
+input[type="date"]:focus::-webkit-datetime-edit{
+    color: #000;
+}
